--- a/client/src/index.css
+++ b/client/src/index.css
@@ -99,9 +99,9 @@ body {
   position: fixed;
   width: 100%;
   height: auto;
-  max-width: 50rem;
+  max-width: 49rem;
   background-color: white;
-  border: 2px solid black;
+  border: 4px solid black;
   border-radius: 1rem;
 }
 
@@ -113,7 +113,7 @@ body {
 .modal-content {
   text-align: left;
   align-items: center;
-  padding: 2rem;
+  padding: 3rem 3rem 0 3rem;
   align-items: center;
 }
 
@@ -127,6 +127,8 @@ body {
   text-align: center;
   justify-content: center;
   margin-bottom: 10px;
+  margin-top: 10px;
+  padding-bottom: 3rem;
 }
 
 .modal-btn {
@@ -159,7 +161,8 @@ body {
 #modal1 {
   background-color: rgb(255, 255, 255);
   border: 1px solid black;
-  margin-top: 10px;
+  margin-top: 20px;
+  border-radius: 2px;
 }
 
 .errorMessage {
@@ -388,6 +391,7 @@ select {
 #submit {
   font-size: 15px;
   padding: 8px;
+  border-radius: 2px;
 }
 
 .inputText {
