ternary logic for voter info vs logged in voter info

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -765,6 +765,55 @@ label {
   margin-bottom: 3rem;
 }
 
+.search-item{
+    /* padding: 15px 10px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 800px; */
+    /* display: inline-grid; */
+    /* align-items: left;
+    text-align: center; */
+    border: 2px solid rgb(66, 127, 132);
+}
+
+.searchItemInnerDiv{
+    padding: 15px 10px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 800px;
+    align-items: left;
+    text-align: center;
+}
+
+.flexVoterButtonsRow{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.flexVoterButtonsCol{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.flexVoterButtonsRow button{
+  margin-right: 20px;
+}
+
+.flexVoterButtonsCol button {
+margin-bottom: 10px;
+}
+
+#editFullName{
+    font-size: 22px;
+    line-height: 1;
+    margin-left: 0;
+    margin-right: 0;
+    font-family: monospace;
+}
+
 #fullNameTitle {
   font-size: 22px;
   line-height: 1;
