--- a/client/src/index.css
+++ b/client/src/index.css
@@ -765,6 +765,23 @@ label {
   margin-bottom: 3rem;
 }
 
+.viewVotingInfoBtn{
+  background-color: white;
+  color: black;
+  border: 2px solid black;
+  line-height: 2;
+  letter-spacing: 1.5px;
+  padding: 3px 10px;
+  font-family: monospace;
+  font-size: 13px;
+}
+
+
+.viewVotingInfoBtn:hover{
+  background-color: rgb(194, 222, 226);
+  cursor: pointer;
+}
+
 .search-item{
     /* padding: 15px 10px;
     margin-left: auto;
@@ -781,6 +798,7 @@ label {
     margin-left: auto;
     margin-right: auto;
     width: 800px;
+    height:auto;
     align-items: left;
     text-align: center;
 }
