--- a/client/src/index.css
+++ b/client/src/index.css
@@ -279,12 +279,12 @@ input[placeholder] {
 
 .homeButton {
   width: 440px;
-  height: 150px;
-  font-size: 33px;
+  height: 100px;
+  font-size: 20px;
   font-weight: bold;
   font-family: monospace;
   background-color: rgb(255, 255, 255, .5);
-  border: 7px solid black;
+  border: 4px solid black;
   color: black;
 }
 
@@ -299,7 +299,6 @@ input[placeholder] {
   text-decoration: none;
   color: black;
   padding-top: 20px;
-  padding-bottom: 20px;
   font-weight: bold;
 }
 
@@ -313,15 +312,16 @@ input[placeholder] {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  padding-bottom: 5em;
+  padding-bottom: 3em;
+  margin-top: 20px;
 }
 
 #stickerimage {
   /* background-image: url("images/sticker.png"); */
   /* background-size: contain; */
   display: inline-block;
-  height: 660px;
-  width: 570px;
+  height: 650px;
+  width: 530px;
   margin-right: 50px;
   padding: 0;
   flex: 0 0 auto;
@@ -332,11 +332,11 @@ input[placeholder] {
 
 .buttonContainerHome {
   margin-left: 50px;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   display: flex;
   flex-direction: column;
-  margin-top: 80px;
+  margin-top: 40px;
 }
 
 * {
@@ -675,7 +675,7 @@ label {
   padding: 0 2rem;
   color: black;
   font-family: monospace;
-  font-size: 1.1em;
+  font-size: 1em;
   font-weight: bold;
   text-decoration: none;
   align-items: center;
@@ -701,7 +701,7 @@ label {
 } */
 
 .navBarList {
-  width: 55%;
+  width: 85%;
   height: 100%;
   position: relative;
   float: right;
