styling and authorization restrictions

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -426,6 +426,22 @@ select {
   justify-content: space-between;
 }
 
+button.regFormLoginBtn.btn.btn-primary{
+  cursor: pointer;
+  font-family: monospace;
+  font-weight: bold;
+  padding: 10px 15px;
+  background-color: white;
+  border: 3px solid navy;
+  color: navy;
+  font-size: 18px;
+  margin-right: 10px;
+}
+
+button.regFormLoginBtn.btn.btn-primary:hover{
+  background-color: rgb(176, 212, 243);
+}
+
 /* #add1, #add2{
   width: 50%;
 } */
@@ -674,9 +690,9 @@ label {
 .navBarContainer {
   background-image: url('images/tiedye.jpg');
   opacity: .8;
-  height: 9em;
+  height: 9.2em;
   width: 100%;
-  margin: 0;
+  margin-bottom: 30px;
   position: relative;
   background-size: cover;
   background-position: bottom center;
@@ -685,7 +701,8 @@ label {
 #nav1,
 #nav2,
 #nav3,
-#nav4 {
+#nav4, 
+#nav5, #nav6 {
   padding: 0 2rem;
   color: black;
   font-family: monospace;
@@ -697,13 +714,20 @@ label {
   text-align: center;
 }
 
-#nav2:hover,
-#nav3:hover,
-#nav4:hover,
-.active {
+a#nav1:hover, a#nav1:active, a#nav3:active, a#nav2:active, 
+a#nav4:active,
+a#nav5:active,
+a#nav6:active,
+a#nav2:hover,
+a#nav3:hover,
+a#nav4:hover, a#nav5:hover, a#nav6:hover{
   border-bottom: 2px solid black;
 }
 
+.voterListHeader{
+  color: black;
+  text-shadow: none;
+}
 /* .navBarList{
   width: 80%;
   float: right;
@@ -716,7 +740,7 @@ label {
 
 .navBarList {
   /* width: 90%; */
-  height: 100%;
+  height: auto;
   position: relative;
   float: right;
   justify-content: flex-end;
@@ -725,7 +749,7 @@ label {
   text-align: center;
   padding: 20px;
   font-size: 20px;
-  text-shadow: 1px 1px rgb(48, 96, 179);;
+  text-shadow: .5px .5px rgb(120, 167, 187);
 }
 
 .hidden {
@@ -750,7 +774,7 @@ label {
   padding-top: 8px;
   line-height: 1;
   font-family: monospace;
-  padding-bottom: 8px;
+  /* padding-bottom: 8px; */
   justify-items: center;
   align-self: center;
   justify-self: center;
@@ -823,7 +847,7 @@ label {
 }
 
 .searchContainerRed {
-  padding: 20px 0px 35px 40px;
+  padding: 20px 0px 20px 30px;
   border: 2px solid rgb(121, 15, 15);
   width: 60%;
   height: auto;
