--- a/client/src/index.css
+++ b/client/src/index.css
@@ -34,7 +34,7 @@ body {
 }
 
 .modal-title1 {
-  font-size: 77px;
+  font-size: 60px;
   display: flow-root;
   letter-spacing: 3px;
   text-shadow: 2px 2px rgb(120, 167, 187);
@@ -119,22 +119,23 @@ body {
   z-index: 1000;
   position: fixed;
   width: 100%;
+  opacity: 1;
   height: auto;
   max-width: 49rem;
   background-color: white;
-  border: 4px solid black;
+  /* border: 4px solid black; */
   border-radius: 1rem;
 }
 
 .modal-header {
-  padding: 0.1rem 1.5rem 0rem 1.5rem;
+  padding: 0.1rem .5rem 0rem 1.5rem;
   align-items: center;
 }
 
 .modal-content {
   text-align: left;
   align-items: center;
-  padding: 3rem 3rem 0 3rem;
+  padding: 0rem 2rem 0 2rem;
   align-items: center;
 }
 
@@ -814,6 +815,17 @@ a#nav4:hover, a#nav5:hover, a#nav6:hover{
   width: 100%;
   height: auto;
   text-align: left;
+}
+
+input#my-input.editItemInput{
+  border-bottom: 1.5px solid black;
+  padding-left: 20px;
+  padding-right: 20px;
+  text-align: center;
+  padding-bottom: 5px;
+  border-top: none;
+  border-left: none;
+  border-right: none;
 }
 
 .searchItemEdit {
